--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -6,7 +6,8 @@
 	border-radius: 12px;
 	box-shadow: 0 12px 20px rgba(65, 65, 65, 0.25);
 	margin: 0 auto;
-	padding: 50px 40px;
+	// padding: 50px 40px;
+	padding: 0 8px;
 	background: #fff;
 	position: fixed;
 	@include top-center;
