--- a/src/assets/scss/components/product.scss
+++ b/src/assets/scss/components/product.scss
@@ -114,6 +114,25 @@
 	}
 }
 
+.product-form-group{
+	margin-bottom: 14px;
+
+	&__head{
+		@include font(normal, 500, 1.25rem, 1.2, $color-text);
+		margin-bottom: 8px;
+	}
+
+	&__text{
+		@include font(normal, normal, 1rem, 1.2, $color-grey);
+		margin-bottom: 5px;
+	}
+
+	&__subtitle{
+		@include font(normal, 500, 1.125rem, 1.2, #676767);
+		margin-bottom: 5px;
+	}
+}
+
 .product-choose-wrap{
 	display: flex;
 	flex-wrap: wrap;
@@ -348,6 +367,172 @@
 	}
 }
 
+.product-param{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: wrap;
+	min-width: 120px;
+	margin-top: 6px;
+
+	&__item{
+		display: inline-flex;
+		height: 48px;
+		border-radius: 24px;
+		padding: 4px;
+		margin: 10px;
+		background: #f5f5f5;
+		cursor: pointer;
+		transition: all 0.2s ease 0s;
+	}
+
+	&__icon{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 40px;
+		height: 40px;
+		border-radius: 50%;
+		background: #fff;
+		@include font(normal, 500, 1.125rem, 1, #9B9B9B);
+	}
+
+	&__text{
+		@include font(normal, 500, 1rem, 40px, #666666);
+		padding: 0 12px;
+		transition: all 0.2s ease 0s;
+	}
+
+	&__item.active,
+	&__item:hover{
+		background: $color-orange;
+	}
+
+	&__item.active &__text,
+	&__item:hover &__text{
+		color: #fff;
+	}
+}
+
+.prod-choose-img{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -11px;
+	margin-right: -11px;
+
+	&__item{
+		display: inline-block;
+		vertical-align: top;
+		width: 80px;
+		height: 80px;
+		margin: 11px;
+	}
+
+	input[type=checkbox],
+	input[type=radio]{
+		display: none;
+	}
+
+	&__content{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 100%;
+		border-radius: 12px;
+		background: #f5f5f5;
+		position: relative;
+		padding: 5px;
+		transition: all 0.3s ease 0s;
+		cursor: pointer;
+	}
+
+	&__icon{
+		display: inline-flex;
+		align-items: center;
+		justify-content: center;
+		width: 27px;
+		height: 27px;
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+
+	&__item:hover &__content,
+	input[type=checkbox]:checked + &__content,
+	input[type=radio]:checked + &__content{
+		background: $color-orange;
+	}
+}
+
+.prod-choose-add{
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -8px;
+	margin-right: -8px;
+
+	&__item{
+		width: calc(33.33% - 16px);
+		margin: 8px;
+	}
+
+	&__content{
+		display: inline-flex;
+		align-items: center;
+		justify-content: space-between;
+		min-height: 104px;
+		width: 100%;
+		height: 100%;
+		padding: 5px 10px;
+		border-radius: 12px;
+		background: #f5f5f5;
+		transition: all 0.3s ease 0s;
+		cursor: pointer;
+	}
+
+	&__icon{
+		width: 40px;
+		text-align: center;
+	}
+
+	&__info{width: calc(100% - 60px);}
+
+	&__title{
+		@include font(normal, 500, 1.125rem, 1.2, #4a4a4a);
+		transition: all 0.3s ease 0s;
+	}
+
+	&__price{
+		@include font(normal, normal, 1rem, 1.2, $color-grey);
+		margin-top: 12px;
+		transition: all 0.3s ease 0s;
+	}
+
+	input[type=checkbox],
+	input[type=radio]{
+		display: none;
+	}
+
+	&__item:hover &__content,
+	input[type=checkbox]:checked + &__content,
+	input[type=radio]:checked + &__content{
+		background: $color-orange;
+	}
+
+	&__item:hover &__title,
+	&__item:hover &__price,
+	input[type=checkbox]:checked + &__content &__title,
+	input[type=checkbox]:checked + &__content &__price,
+	input[type=radio]:checked + &__content &__title,
+	input[type=radio]:checked + &__content &__price{
+		color: #fff;
+	}
+
+	&_small &__item{width: calc(25% - 16px);}
+	&_small &__content{min-height: 84px;}
+	&_small &__info{width: calc(100% - 50px);}
+}
+
 html[dir="rtl"]{
 	.product{
 		&__info{
@@ -404,6 +589,13 @@ html[dir="rtl"]{
 		&__title {
 			padding-right: 0;
 			padding-left: 20px;
+		}
+	}
+
+	.prod-choose-img{
+		&__icon{
+			right: auto;
+			left: 0;
 		}
 	}
 }
