--- a/src/assets/scss/layouts/main.scss
+++ b/src/assets/scss/layouts/main.scss
@@ -127,6 +127,7 @@ button.btn{
 	text-decoration: none;
 	transition: all 0.3s ease 0s;
 	box-shadow: 0 8px 16px rgba(138, 138, 138, 0.25);
+	background: linear-gradient(72.37deg, #F28F16 6.41%, #D60B52 95.11%);
 }
 
 .btn:hover,
