--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,6 +6,7 @@ block variables
 		var pagelist = [
 			{href: 'food-menu.html',name:'Food menu'},
 			{href: 'food-menu-cards.html',name:'Food menu cards'},
+			{href: 'product.html',name:'Popup order dish'},
 		];
 
 	- 
@@ -28,7 +29,7 @@ block variables
 			{href: 'paymont-method-popup.html',name:'Paymont method popup'},
 			{href: 'paymont-method-popup-step-two.html',name:'Paymont method popup (mobile step two)'},
 			{href: 'popup-choose-item.html',name:'Popup choose item'},
-			{href: 'product.html',name:'Popup order dish'},
+			//- {href: 'product.html',name:'Popup order dish'},
 			{href: 'profile.html',name:'Popup profile'},
 			{href: 'add-adress.html',name:'Add adress'},
 			{href: 'popup-order-history.html',name:'Popup order history'},
