--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,6 +7,7 @@ block variables
 			{href: 'food-menu.html',name:'Food menu'},
 			{href: 'food-menu-cards.html',name:'Food menu cards'},
 			{href: 'product.html',name:'Popup order dish'},
+			{href: 'delivery-areas.html',name:'Popup delivery areas'},
 		];
 
 	- 
