--- a/src/assets/scss/components/catalog.scss
+++ b/src/assets/scss/components/catalog.scss
@@ -624,28 +624,54 @@
 	}
 }
 
+.data-delivery-wrap{
+	max-width: 480px;
+	margin: 0 auto;
+
+	.filter{
+		&__item{min-width: 108px;}
+		&__item:not(:last-child){margin-right: 16px;}
+	}
+}
 
 .data-delivery{
 	display: flex;
 	flex-wrap: wrap;
 	// justify-content: center;
 	background: #f5f5f5;
-	border-radius: 12px;
-	padding: 15px 5px;
-	margin-top: 20px;
+	border-radius: 0 12px 12px 12px;
+	padding: 20px 10px;
+	margin-top: 15px;
 
-	&__item{padding: 0 15px;}
+	&__item{
+		width: 33.33%;
+		padding: 0 15px;
+	}
 
 	&__item:not(:last-child){border-right: 1px solid #e9e9e9;}
 
 	&__title{
-		@include font(normal, 500, 1rem, 1.2, #9b9b9b);
+		@include font(normal, 500, 0.75rem, 1.2, #9b9b9b);
 		text-transform: uppercase;
 		margin-bottom: 15px;
 	}
 
 	&__val{
-		@include font(normal, normal, 1.5rem, 1.2, $color-red);
+		@include font(normal, normal, 1rem, 1.2, $color-red);
+	}
+}
+
+.data-delivery-group{
+	margin-top: 17px;
+
+	&__label{
+		@include font(normal, 500, 1rem, 1.2, $color-text);
+		margin-bottom: 10px;
+	}
+
+	.data-delivery{
+		margin-top: 8px;
+		&__item{width: 50%;}
 	}
 }
 
@@ -714,6 +740,8 @@ html[dir="rtl"]{
 	}
 
 	.data-delivery{
+		border-radius: 12px 0 12px 12px;
+
 		&__item:not(:last-child){
 			border-right: 0;
 			border-left: 1px solid #e9e9e9;
@@ -727,6 +755,15 @@ html[dir="rtl"]{
 		}
 
 		&__bg{transform: scale(-1,1);}
+	}
+
+	.data-delivery-wrap{
+		.filter{
+			&__item:not(:last-child){
+				margin-right: 0;
+				margin-left: 16px;
+			}
+		}
 	}
 }
 
@@ -1547,7 +1584,7 @@ html[dir="rtl"]{
 	.data-delivery{
 		display: block;
 		background: transparent;
-    padding: 20px;
+		padding: 20px;
 
 		&__item{
 			display: flex;
