--- a/src/assets/scss/components/form-site.scss
+++ b/src/assets/scss/components/form-site.scss
@@ -358,6 +358,11 @@ input[type="text"].payment-sum__field{
 	}
 }
 
+.how-much-form{
+	max-width: 580px;
+	margin: 0 auto;
+}
+
 .tab-form{
 	max-width: 480px;
 	margin: 20px auto 0;
