--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -8,6 +8,7 @@ block variables
 			{href: 'food-menu-cards.html',name:'Food menu cards'},
 			{href: 'product.html',name:'Popup order dish'},
 			{href: 'delivery-areas.html',name:'Popup delivery areas'},
+			{href: 'how-much.html',name:'Popup how much'},
 		];
 
 	- 
