--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -524,7 +524,7 @@ block modal
 		.popup-wrap.popup-wrap_mob-bot(style="width: 817px;")
 			.popup
 				.product
-					.product__close.d-none.d-md-inline-block
+					.product__close
 						+svg('ic-close-grad','ic-close-grad', '32', '32')
 
 					.product__img(style='background-image: url(/assets/img/product-pizza.png);')
