--- a/src/assets/scss/components/product.scss
+++ b/src/assets/scss/components/product.scss
@@ -423,8 +423,6 @@
 	&__item{
 		display: inline-block;
 		vertical-align: top;
-		width: 80px;
-		height: 80px;
 		margin: 11px;
 	}
 
@@ -437,8 +435,8 @@
 		display: inline-flex;
 		align-items: center;
 		justify-content: center;
-		width: 100%;
-		height: 100%;
+		width: 80px;
+		height: 80px;
 		border-radius: 12px;
 		background: #f5f5f5;
 		position: relative;
@@ -728,11 +726,125 @@ html[dir="rtl"]{
 		z-index: 1010;
 	}
 
+	.product-param{
+		&__item{
+			height: 40px;
+			margin: 4px;
+			min-width: 103px;
+		}
+
+		&__head{margin-bottom: 6px;}
+
+		&__icon{
+			width: 32px;
+			height: 32px;
+		}
+
+		&__text{
+			line-height: 32px;
+			padding: 0 8px;
+		}
+	}
+
+	.product-form-group{
+		&__head{font-size: 1rem;}
+		&__text{font-size: 0.875rem;}
+	}
+
+	.prod-choose-img{
+		flex-wrap: nowrap;
+		width: calc(100% + 40px);
+		margin-left: -20px;
+		margin-right: -20px;
+		overflow-x: auto;
+		padding: 5px 16px;
+		
+		&__item{margin: 4px;}
+
+		&__content{
+			width: 56px;
+			height: 56px;
+			padding: 10px;
+		}
+
+		&__icon{
+			width: 17px;
+			height: 17px;
+		}
+	}
+
+	.prod-choose-add{
+		flex-wrap: nowrap;
+		margin-left: -20px;
+		margin-right: -20px;
+		overflow-x: auto;
+		padding: 5px 16px;
+
+		&__item{
+			width: auto;
+			min-width: 106px;
+			margin: 4px;
+			position: relative;
+		}
+
+		&__item::after{
+			content: '';
+			display: inline-block;
+			width: 16px;
+			height: 16px;
+			position: absolute;
+			top: 0;
+			left: 100%;
+		}
+
+		&__content{
+			display: block;
+			text-align: center;
+		}
+
+		&__icon,
+		&__info{
+			width: 100%;
+		}
+
+		&__icon{
+			height: 48px;
+			margin-bottom: 6px;
+
+			img{max-height: 100%;}
+		}
+
+		&__title,
+		&__price{
+			font-size: 0.875rem;
+		}
+
+		&__price{
+			white-space: nowrap;
+			margin-top: 2px;
+		}
+
+		&_small &__icon{height: 40px;}
+		&_small &__item{min-width: 76px;}
+
+		&_small &__icon,
+		&_small &__info{
+			width: 100%;
+		}
+	}
+
 	html[dir="rtl"]{
 		.product-form-field{
 			.input-check__text{
 				margin-left: 0;
 				margin-right: 8px;
+			}
+		}
+
+		.prod-choose-add{
+			&__item::after{
+				left: auto;
+				right: 100%;
 			}
 		}
 	}
