--- a/src/pug/pages/food-menu-cards.pug
+++ b/src/pug/pages/food-menu-cards.pug
@@ -348,6 +348,27 @@ block content
 				include ../components/catalog-menu
 
 				//- section.catalog-list.catalog-list_tile
+				.working-time.working-time_red
+					img.working-time__bg(src='/assets/img/wt-wave-white.png')
+
+					.working-time__info
+						.working-time__img
+							img(src='/assets/img/tablet_close.svg')
+						.working-time__label We’re closed
+						
+					.countdown
+						.countdown__label.brand-text Opens in:
+
+						.countdown__content
+							.countdown__sect
+								.countdown__item 0
+								.countdown__item 0
+							.countdown__sect
+								.countdown__item 2
+								.countdown__item 3
+							.countdown__sect
+								.countdown__item 0
+								.countdown__item 3
 				section.catalog-list
 					.catalog-list__item
 						a.catalog-list__img(href='#', style="background-image: url('/assets/img/pizza1.png');")
