--- a/src/assets/scss/components/catalog.scss
+++ b/src/assets/scss/components/catalog.scss
@@ -1581,15 +1581,27 @@ html[dir="rtl"]{
 		}
 	}
 
+	.data-delivery-group{
+		.data-delivery{
+			background: #f3f3f3;
+			border-radius: 12px;
+			padding: 0 12px;
+
+			&__item{width: 100%;}
+		}
+	}
+
 	.data-delivery{
 		display: block;
 		background: transparent;
-		padding: 20px;
+		padding: 20px 0;
 
 		&__item{
 			display: flex;
 			justify-content: space-between;
-			padding: 7px 0;
+			align-items: center;
+			width: 100%;
+			padding: 13px 0 14px;
 		}
 
 		&__item:not(:last-child){
@@ -1601,6 +1613,8 @@ html[dir="rtl"]{
 			margin-bottom: 0;
 			margin-right: 15px;
 		}
+
+		&__val{font-size: 1.25rem;}
 	}
 
 	.working-time{
@@ -1608,6 +1622,30 @@ html[dir="rtl"]{
 		margin-bottom: 10px;
 		padding-top: 8px;
 		padding-bottom: 8px;
+	}
+
+	.data-delivery-wrap{
+		.filter{
+			flex-wrap: nowrap;
+			width: calc(100% + 40px);
+			margin-left: -20px;
+			margin-right: -20px;
+			padding: 0 20px 10px;
+			overflow-x: auto;
+
+			&__item{position: relative;}
+
+			&__item:last-child::after{
+				content: '';
+				display: inline-block;
+				vertical-align: top;
+				width: 20px;
+				height: 20px;
+				position: absolute;
+				top: 0;
+				left: 100%;
+			}
+		}
 	}
 
 	html[dir="rtl"]{
@@ -1646,6 +1684,15 @@ html[dir="rtl"]{
 			&__item:not(:last-child){
 				border: 0;
 				border-bottom: 1px solid #e9e9e9;
+			}
+		}
+
+		.data-delivery-wrap{
+			.filter{
+				&__item:last-child::after{
+					left: auto;
+					right: 100%;
+				}
 			}
 		}
 	}
