fix bottom popup + del pages

--- a/src/assets/scss/components/form-site.scss
+++ b/src/assets/scss/components/form-site.scss
@@ -589,6 +589,30 @@ html[dir="rtl"]{
 		z-index: 1010;
 	}
 
+	.how-much-form{
+		.btn{min-width: 172px;}
+
+		.btn_border-grad{
+			width: auto;
+			min-width: auto;
+			background: transparent;
+		}
+
+		.btn__grad-content{
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			color: $color-red;
+		}
+
+		.btn_border-grad:hover{
+			background: transparent;
+			box-shadow: none;
+		}
+
+		.btn_border-grad:hover .btn__grad-content{color: $color-red;}
+	}
+
 	html[dir="rtl"]{
 		.payment{
 			.card-check{
