--- a/src/assets/scss/components/pizza.scss
+++ b/src/assets/scss/components/pizza.scss
@@ -105,6 +105,14 @@ html[dir="rtl"]{
 			top: 32px;
 			right: 17px;
 		}
+
+		.popup-wrap_mob-bot{
+			.popup__head .h1,
+			.popup__head h1{
+				font-size: 1.25rem;
+				text-align: left;
+			}
+		}
 	}
 
 	html[dir="rtl"]{
