--- a/src/assets/scss/components/popup.scss
+++ b/src/assets/scss/components/popup.scss
@@ -189,10 +189,14 @@ html[dir="rtl"]{
 		background: #fff;
 
 		&_mob-bot{
-			height: calc(100vh - 68px);
+			max-height: calc(100vh - 68px);
+			height: auto;
 			margin-top: 68px;
 			overflow-y: auto;
 			border-radius: 12px 12px 0 0;
+			top: auto;
+			bottom: 0;
+			transform: none;
 
 			.popup{height: 100vh;}
 		}
