--- a/src/pug/pages/typography.pug
+++ b/src/pug/pages/typography.pug
@@ -307,6 +307,14 @@ block content
 			br
 			br
 			br
+			.h2 Tabs filter
+			.tab-filter
+				.tab-filter__item.active Units
+				.tab-filter__item Kg
+			
+			br
+			br
+			br
 			.h2 Tabs
 			.tabs-page
 				.tabs-page__list
